fix mobile start page alignment

--- a/app/theme/wordpress.css
+++ b/app/theme/wordpress.css
@@ -589,11 +589,6 @@ Graph
 
 }
 
-.css-3narwu {
-  margin-left: 33%;
-  line-height: 2;
-}
-
 .css-3narwu h2 {
   border-left: 4px solid #C1D3FE;
 }
